--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1 class="font-bold text-[10px]" id="hiii">I am come back</h1>
-    <script src="./src/drapeau.js"></script>
-    <script src="./src/input.js"></script>
-    <script src="./src/objet.js"></script>
-    <script src="./src/output.js"></script>
+    <script src="./assets/drapeau.js"></script>
+    <script src="./assets/input.js"></script>
+    <script src="./assets/objet.js"></script>
+    <script src="./assets/output.js"></script>
 </body>
 </html>
